@@ -35,11 +35,11 @@ body > header nav li a {
 #settings-toggle a#open-edit-bar {
     *padding: 0.6em 0.5em 0.5em;
 }
-body.template-author .portraitPhoto {
+body.template-user .portraitPhoto {
     filter:  progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand', /* IE6,IE7 */ 
              M11=0.9914448613738104, M12=-0.13052619222005157,M21=0.13052619222005157, M22=0.9914448613738104); 
--ms-filter: "progid:DXImageTransform.Microsoft.Matrix(
+    -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(
              M11=0.9914448613738104, M12=-0.13052619222005157, M21=0.13052619222005157, M22=0.9914448613738104, 
              sizingMethod='auto expand')"; /* IE8 */
-      zoom: 1;    
+    zoom: 1;    
 }
